# zigbee-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: book.yml  build-tc32.yml  ci.yml
boards/efr32mg1-tradfri/: Cargo.toml
boards/efr32mg1-tradfri/link/: bootloader-app.x  device.x  memory.x
boards/efr32mg1-tradfri/src/: lib.rs  ota.rs  storage.rs
boards/efr32mg21-devkit/: Cargo.toml
boards/efr32mg21-devkit/link/: device.x  memory.x
boards/efr32mg21-devkit/src/: lib.rs  storage.rs
boards/esp32-zigbee-devkit/: Cargo.toml
boards/esp32-zigbee-devkit/src/: lib.rs  storage.rs
boards/nrf52840-dk/: Cargo.toml
boards/nrf52840-dk/link/: memory.x
boards/nrf52840-dk/src/: lib.rs  storage.rs
boards/phy62x2-evk/: Cargo.toml
boards/phy62x2-evk/link/: device.x  memory.x  phy6222.x
boards/phy62x2-evk/src/: lib.rs  pins.rs  storage.rs  time.rs  vectors.rs
boards/tlsr8258-tb04/: Cargo.toml  memory.x
boards/tlsr8258-tb04/src/: leds.rs  lib.rs  storage.rs
docs/: efr32-join-debug.md
docs/flasher/: index.html
drivers/bh1750/: Cargo.toml
drivers/bh1750/src/: lib.rs
drivers/bme280/: Cargo.toml
drivers/bme680/: Cargo.toml
drivers/bme680/src/: lib.rs
drivers/scd4x/: Cargo.toml
drivers/scd4x/src/: lib.rs
drivers/sht3x/: Cargo.toml
drivers/sht4x/: Cargo.toml
drivers/sht4x/src/: lib.rs
efr32mg1-hal/: Cargo.toml
efr32mg1-hal/src/: adc.rs  bootloader.rs  clock.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  pm.rs  pwm.rs  routing.rs  spi.rs
efr32mg21-hal/: Cargo.toml
efr32mg21-hal/src/: flash.rs  lib.rs
examples/: README.md
examples/bl702-sensor/: .gitignore  Cargo.toml  README.md  build.rs  memory.x
examples/bl702-sensor/.cargo/: config.toml
examples/bl702-sensor/src/: hal.rs  main.rs  stubs.rs
examples/cc2340-sensor/: Cargo.toml
examples/efr32mg1-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/efr32mg1-sensor/.cargo/: config.toml
examples/efr32mg1-sensor/src/: app.rs  flash_nv.rs  main.rs  platform.rs  sensor.rs  time_driver.rs  vectors.rs
examples/efr32mg1-sensor/tools/: create-ota.sh  verify-layout.py
examples/efr32mg21-sensor/: Cargo.toml  README.md
examples/efr32mg21-sensor/.cargo/: config.toml
examples/efr32mg21-sensor/src/: main.rs
examples/esp32c6-sensor/: Cargo.toml  README.md
examples/esp32c6-sensor/src/: flash_nv.rs  main.rs
examples/esp32h2-sensor/: Cargo.toml  README.md
examples/esp32h2-sensor/.cargo/: config.toml
examples/esp32h2-sensor/src/: flash_nv.rs  main.rs  time_driver.rs
examples/mock-light/: README.md
examples/mock-sensor/: README.md
examples/nrf52833-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/nrf52833-sensor/.cargo/: config.toml
examples/nrf52833-sensor/src/: main.rs
examples/nrf52840-bridge/: Cargo.toml  README.md  memory.x
examples/nrf52840-bridge/.cargo/: config.toml
examples/nrf52840-bridge/src/: main.rs
examples/nrf52840-router/: Cargo.toml  README.md  build.rs
examples/nrf52840-router/.cargo/: config.toml
examples/nrf52840-router/src/: main.rs
examples/nrf52840-sensor/: Cargo.toml  README.md  memory.x
examples/nrf52840-sensor-uf2/: Cargo.toml  build.rs
examples/phy6222-sensor/: Cargo.toml  README.md  build.rs  check-layout.sh  device.x  memory.x
examples/telink-b91-sensor/: Cargo.toml  README.md  build.rs  memory.x
examples/telink-tlsr8258-radio/: Cargo.toml  README.md  build.rs  memory.x
examples/telink-tlsr8258-router/: Cargo.toml  README.md  build.rs
examples/telink-tlsr8258-sensor/: Cargo.toml  README.md  build-tc32.sh  build.rs  memory-pm.x  memory-runtime.x  memory.x
phy6222-hal/: Cargo.toml
phy6222-hal/src/: adc.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  regs.rs  sleep.rs
scripts/: tlsr8258.sh
targets/: tc32-none-eabi-lld.json  tc32-none-eabi.json
tests/: Cargo.toml
tests/src/: aps_tests.rs  bdb_tests.rs  cluster_tests.rs  efr32mg1_pm_tests.rs  integration_tests.rs  lib.rs  mac_tests.rs  nwk_tests.rs  ota_tests.rs  runtime_tests.rs  serial_tests.rs  types_tests.rs  zcl_tests.rs  zdo_tests.rs
tlsr8258-hal/: Cargo.toml
tlsr8258-hal/src/: adc.rs  clocks.rs  flash.rs  gpio.rs  lib.rs  mmio.rs  pm.rs  timer.rs  watchdog.rs
tlsr8258-hal/src/radio/: frame.rs  mod.rs  phy.rs
tlsr8258-rt/: Cargo.toml
tlsr8258-rt/src/: lib.rs
tools/: tc32_encode.py  tlsr8258-firmware.sh
tools/efr32mg1-lab/: Cargo.toml  README.md
tools/phy62x2-image/: Cargo.toml
tools/telink-tlsr8258-lab/: Cargo.toml  README.md  build.rs  (+1 more)
zigbee/: Cargo.toml
zigbee-aps/: Cargo.toml
zigbee-aps/src/: apsde.rs  apsme.rs  binding.rs  fragment.rs  group.rs  lib.rs  security.rs
zigbee-bdb/: Cargo.toml
zigbee-bdb/src/: attributes.rs  finding_binding.rs  formation.rs  lib.rs  security_persistence.rs  state_machine.rs  steering.rs  tclk_exchange.rs  touchlink.rs
zigbee-crypto/: Cargo.toml
zigbee-crypto/src/: lib.rs
zigbee-mac/: Cargo.toml
zigbee-mac/src/: frames.rs  lib.rs  phy.rs  pib.rs  platform.rs  primitives.rs  soft_mac.rs
zigbee-mac/src/bl702/: driver.rs  mod.rs
zigbee-mac/src/cc2340/: mod.rs
zigbee-mac/src/efr32/: driver.rs  mod.rs  rac_seq.rs
zigbee-mac/src/efr32/rail_ffi/: em_device.h  rail_shim.c
zigbee-mac/src/efr32s2/: mod.rs
zigbee-mac/src/esp/: driver.rs  mod.rs
zigbee-mac/src/mock/: mod.rs
zigbee-mac/src/nrf/: mod.rs  radio_phy.rs
zigbee-mac/src/phy6222/: driver.rs  mod.rs
zigbee-mac/src/serial/: driver.rs  ezsp.rs  mod.rs
zigbee-mac/src/telink/: driver.rs  driver_hal.rs  mod.rs
zigbee-nwk/: Cargo.toml
zigbee-nwk/src/: frames.rs  indirect.rs  lib.rs  neighbor.rs  nib.rs  nlde.rs  nlme.rs  nwk_commands.rs  routing.rs  security.rs
zigbee-runtime/: Cargo.toml
zigbee-runtime/src/: builder.rs  event_loop.rs  firmware_writer.rs  lib.rs  log_nv.rs  nv_storage.rs  ota.rs  power.rs  security_journal.rs  security_store.rs  synthetic_sensor.rs  templates.rs
zigbee-zcl/: Cargo.toml
zigbee-zdo/: Cargo.toml
zigbee-zdo/src/: binding_mgmt.rs  descriptors.rs  device_announce.rs  discovery.rs  handler.rs  lib.rs  network_mgmt.rs
zigbee/src/: coordinator.rs  lib.rs  router.rs  trust_center.rs
(+135 files in other folders)
