[workspace]
resolver = "2"
members = [
    "zigbee-types",
    "zigbee-mac",
    "zigbee-nwk",
    "zigbee-aps",
    "zigbee-zdo",
    "zigbee-bdb",
    "zigbee-zcl",
    "zigbee-runtime",
    "zigbee",
    "examples/mock-sensor",
    "examples/mock-coordinator",
    "examples/mock-light",
    "examples/mock-sleepy-sensor",
    "tests",
]
exclude = [
    "examples/nrf52840-sensor",
    "examples/nrf52840-bridge",
    "examples/esp32c6-sensor",
    "examples/bl702-sensor",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/faronov/zigbee-rs"

[workspace.dependencies]
heapless = "0.9"
log = "0.4"
