[workspace]
resolver = "2"
members = [
    "zigbee-types",
    "zigbee-crypto",
    "zigbee-mac",
    "zigbee-nwk",
    "zigbee-aps",
    "zigbee-zdo",
    "zigbee-bdb",
    "zigbee-zcl",
    "zigbee-runtime",
    "zigbee",
    "drivers/sht3x",
    "examples/mock-sensor",
    "examples/mock-coordinator",
    "examples/mock-light",
    "examples/mock-sleepy-sensor",
    "tests",
    "tools/phy62x2-image",
]
exclude = [
    "examples/nrf52840-sensor",
    "examples/nrf52840-sensor-uf2",
    "examples/nrf52840-router",
    "examples/nrf52833-sensor",
    "examples/esp32c6-sensor",
    "examples/esp32h2-sensor",
    "examples/bl702-sensor",
    "examples/cc2340-sensor",
    "examples/telink-b91-sensor",
    "examples/telink-tlsr8258-sensor",
    "examples/telink-tlsr8258-router",
    "tools/telink-tlsr8258-lab",
    "examples/telink-tlsr8258-radio",
    "tlsr8258-hal",
    "tlsr8258-rt",
    "boards/tlsr8258-tb04",
    "boards/nrf52840-dk",
    "boards/phy62x2-evk",
    "boards/esp32-zigbee-devkit",
    "boards/efr32mg1-tradfri",
    "boards/efr32mg21-devkit",
    "efr32mg1-hal",
    "efr32mg21-hal",
    "examples/phy6222-sensor",
    "examples/efr32mg1-sensor",
    "examples/efr32mg21-sensor",
    "phy6222-hal",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/faronov/zigbee-rs"

[workspace.dependencies]
embedded-storage = "0.3"
heapless = "0.9"
log = "0.4"
