[package]
name = "zigbee-aps"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zigbee PRO R22 APS layer — binding, group, data service, key management"
repository = "https://github.com/zigbee-rs/zigbee-rs"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
zigbee-nwk = { version = "0.1.0", path = "../zigbee-nwk" }
zigbee-mac = { version = "0.1.0", path = "../zigbee-mac" }
log = "0.4"
aes = { version = "0.8", default-features = false }
# NOTE: ccm crate was removed (its decrypt_in_place_detached consumes ~6 KiB
# of stack on tc32, blowing the 10 KiB SVC stack on TLSR8258). Replaced with
# a hand-rolled AES-CCM* implementation in src/security.rs (M=4, L=2,
# nonce=13) per Zigbee §B.1.2, stack budget ~400 B.
rtt-target = { version = "0.6", optional = true }

[features]
defmt = []
router = ["zigbee-nwk/router"]
efr32-trace = ["dep:rtt-target"]
