[package]
name = "zigbee-bdb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zigbee PRO R22 BDB layer — Base Device Behavior commissioning (v3.0.1)"
repository = "https://github.com/zigbee-rs/zigbee-rs"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
zigbee-mac  = { version = "0.1.0", path = "../zigbee-mac" }
zigbee-nwk  = { version = "0.1.0", path = "../zigbee-nwk" }
zigbee-aps  = { version = "0.1.0", path = "../zigbee-aps" }
zigbee-zcl  = { version = "0.1.0", path = "../zigbee-zcl" }
zigbee-zdo  = { version = "0.1.0", path = "../zigbee-zdo" }
log = "0.4"
rtt-target = { version = "0.6", optional = true }

[features]
efr32-trace = ["dep:rtt-target"]
# Telink TLSR8258 debug — writes counters to a known SRAM region
# (0x0084F450..0x0084F500) so a host-side flash dump can decode them.
# Safe to leave off on other targets — gates ALL writes.
telink-debug = []
