[package]
name = "zigbee-mac"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "IEEE 802.15.4 MAC abstraction for zigbee-rs — trait + multi-platform backends"
repository = "https://github.com/zigbee-rs/zigbee-rs"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }

# ── ESP32-C6 backend ────────────────────────────────────────
esp-hal = { version = "1.0.0", features = ["rt", "unstable"], default-features = false, optional = true }
esp-radio = { version = "0.17.0", features = ["ieee802154", "unstable"], default-features = false, optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-sync = { version = "0.1.0", optional = true }

# ── nRF52840 backend ────────────────────────────────────────
embassy-nrf = { version = "0.3", features = ["nrf52840"], optional = true }

# ── STM32WB55 backend ───────────────────────────────────────
# embassy-stm32 with wpan feature for 802.15.4 coprocessor
embassy-stm32 = { version = "0.2", optional = true }

# ── Shared Embassy async primitives (used by multiple backends)
embassy-sync = { version = "0.7", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-futures = { version = "0.1", optional = true }

# ── Logging ─────────────────────────────────────────────────
log = "0.4"

[features]
default = []
alloc = []
mock = []

# Platform backends
esp32c6 = [
    "alloc",
    "dep:esp-radio", "dep:esp-hal", "dep:esp-alloc", "dep:esp-sync",
    "esp-radio/esp32c6", "esp-hal/esp32c6", "esp-alloc/esp32c6", "esp-sync/esp32c6",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures",
]
nrf52840 = [
    "dep:embassy-nrf",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures",
]
stm32wb55 = [
    "dep:embassy-stm32",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures",
]
efr32mg24 = [
    # Requires external RAIL library linked at build time
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures",
]
cc2652 = [
    # Requires cc13x2_26x2_pac
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures",
]
serial = []
