[package]
name = "zigbee-mac"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "IEEE 802.15.4 MAC abstraction for zigbee-rs — trait + multi-platform backends"
repository = "https://github.com/zigbee-rs/zigbee-rs"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }

# ── ESP32-C6 backend ────────────────────────────────────────
esp-hal = { version = "1.0.0", features = ["rt", "unstable"], default-features = false, optional = true }
esp-radio = { version = "0.17.0", features = ["ieee802154", "unstable"], default-features = false, optional = true }
esp-alloc = { version = "0.9.0", optional = true }
esp-sync = { version = "0.1.0", optional = true }

# ── nRF backends ─────────────────────────────────────────────
# Each chip variant needs its own embassy-nrf instance with the
# correct chip feature flag. We use Cargo renamed deps so both
# can coexist in Cargo.toml (only one is activated at a time).
embassy-nrf52840 = { package = "embassy-nrf", version = "0.3", features = ["nrf52840"], optional = true }
embassy-nrf52833 = { package = "embassy-nrf", version = "0.3", features = ["nrf52833"], optional = true }

# ── BL702 backend ─────────────────────────────────────────────
# Uses FFI to Bouffalo's lmac154 C library (liblmac154.a).
# Firmware must link liblmac154.a from BL IoT SDK.
# No Rust HAL dependency — bl702-hal pins embedded-hal 1.0.0-alpha.5
# which conflicts with the modern ecosystem. Clock/GPIO init is done
# via the C SDK or a future compatible HAL.

# ── Telink TLSR82xx HAL backend ───────────────────────────────
tlsr82xx-hal = { path = "../../tlsr82xx/tlsr82xx-hal", optional = true, default-features = false, features = ["chip-8258"] }

# ── Shared Embassy async primitives (used by multiple backends)
embassy-sync = { version = "0.7", optional = true }
embassy-time = { version = "0.4", optional = true }
embassy-futures = { version = "0.1", optional = true }
rtt-target = { version = "0.6", optional = true }

# ── Logging ─────────────────────────────────────────────────
log = "0.4"

[features]
default = []
alloc = []
mock = []

# Platform backends
esp32c6 = [
    "alloc",
    "dep:esp-radio", "dep:esp-hal", "dep:esp-alloc", "dep:esp-sync",
    "esp-radio/esp32c6", "esp-hal/esp32c6", "esp-alloc/esp32c6", "esp-sync/esp32c6",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]
esp32h2 = [
    "alloc",
    "dep:esp-radio", "dep:esp-hal", "dep:esp-alloc", "dep:esp-sync",
    "esp-radio/esp32h2", "esp-hal/esp32h2", "esp-alloc/esp32h2", "esp-sync/esp32h2",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]
nrf52840 = [
    "dep:embassy-nrf52840",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]
nrf52833 = [
    "dep:embassy-nrf52833",
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

bl702 = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

cc2340 = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

telink = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

# Telink with HAL crate (uses tlsr82xx-hal instead of direct register access)
telink-hal = [
    "telink",
    "dep:tlsr82xx-hal",
]

phy6222 = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

efr32 = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

efr32mg21 = [
    "dep:embassy-sync", "dep:embassy-time", "dep:embassy-futures", "dep:rtt-target",
]

