[package]
name = "zigbee-nwk"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zigbee PRO R22 NWK layer — network formation, join, routing, data service"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
zigbee-crypto = { version = "0.1.0", path = "../zigbee-crypto" }
zigbee-mac = { version = "0.1.0", path = "../zigbee-mac" }
log = "0.4"

[features]
default = []
router = []
trace = []

[dev-dependencies]
zigbee-mac = { version = "0.1.0", path = "../zigbee-mac", features = ["mock"] }
