[package]
name = "zigbee-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Zigbee device runtime — event loop, device builder, NV storage"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
zigbee-mac = { version = "0.1.0", path = "../zigbee-mac" }
zigbee-nwk = { version = "0.1.0", path = "../zigbee-nwk" }
zigbee-aps = { version = "0.1.0", path = "../zigbee-aps" }
zigbee-zdo = { version = "0.1.0", path = "../zigbee-zdo" }
zigbee-bdb = { version = "0.1.0", path = "../zigbee-bdb" }
zigbee-zcl = { version = "0.1.0", path = "../zigbee-zcl" }
log = "0.4"

[features]
default = []
router = ["zigbee-aps/router"]
ota = []
