[package]
name = "zigbee"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Complete Zigbee PRO R22 stack — coordinator, router, and end device support"

[dependencies]
heapless = "0.9"
zigbee-types = { version = "0.1.0", path = "../zigbee-types" }
zigbee-crypto = { version = "0.1.0", path = "../zigbee-crypto" }
zigbee-mac = { version = "0.1.0", path = "../zigbee-mac" }
zigbee-nwk = { version = "0.1.0", path = "../zigbee-nwk" }
zigbee-aps = { version = "0.1.0", path = "../zigbee-aps" }
zigbee-zdo = { version = "0.1.0", path = "../zigbee-zdo" }
zigbee-bdb = { version = "0.1.0", path = "../zigbee-bdb" }
zigbee-zcl = { version = "0.1.0", path = "../zigbee-zcl" }
zigbee-runtime = { version = "0.1.0", path = "../zigbee-runtime" }
log = "0.4"
