[package]
name = "efr32mg21-devkit"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Board support for the EFR32MG21 Zigbee development target"
repository = "https://github.com/faronov/zigbee-rs"
publish = false

[dependencies]
efr32mg21-hal = { path = "../../efr32mg21-hal" }
embedded-storage = "0.3"
zigbee-runtime = { path = "../../zigbee-runtime" }
