[package]
name = "nrf52840-dk"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Board support for the Nordic nRF52840 DK"
repository = "https://github.com/faronov/zigbee-rs"
publish = false

[dependencies]
embedded-storage = "0.3"
embassy-nrf = { version = "0.3", features = ["nrf52840"] }
zigbee-runtime = { path = "../../zigbee-runtime" }
