[package]
name = "zigbee-sht4x"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Blocking and async embedded-hal SHT4x temperature and humidity driver"
repository = "https://github.com/faronov/zigbee-rs"
publish = false

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"

[dev-dependencies]
heapless = "0.9"
