[package]
name = "efr32mg1-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["efr32"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# Embassy async runtime
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "task-arena-size-4096"] }
embassy-time = { version = "0.5" }
embassy-time-driver = "0.2"
embassy-futures = "0.1"

# ARM Cortex-M4F support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }

# Data structures for no_std
heapless = "0.8"
static_cell = "2"

# Logging
log = "0.4"
rtt-target = "0.6"

# Panic handler for embedded target
panic-halt = "1.0"

[features]
default = []
stubs = []

[profile.release]
opt-level = "s"
lto = true
