[package]
name = "efr32mg21-sensor"
version = "0.1.0"
edition = "2024"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["efr32mg21"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }
efr32mg21-devkit = { path = "../../boards/efr32mg21-devkit" }

# Embassy async runtime
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5" }
embassy-time-driver = "0.2"
embassy-futures = "0.1"

# ARM Cortex-M33 support
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }

# Data structures for no_std
heapless = "0.8"

# Logging
log = "0.4"

# Panic handler for embedded target
panic-halt = "1.0"

[features]
default = []
stubs = []

[profile.release]
opt-level = "s"
lto = true
