[package]
name = "esp32h2-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["esp32h2"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# ESP32-H2 HAL and runtime
esp-hal = { version = "1.0.0", features = ["esp32h2", "unstable"] }
esp-radio = { version = "0.17.0", features = ["esp32h2", "ieee802154", "unstable"] }
esp-backtrace = { version = "0.14", features = ["esp32h2", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32h2"] }
esp-alloc = "0.9"
critical-section = "1.2"
static_cell = "2"
embedded-hal = "1.0"
log = "0.4"

# Flash NV storage
esp-storage = { version = "0.7", features = ["esp32h2"] }

# Embassy async runtime (time only — executor driven manually)
embassy-time = { version = "0.4" }
embassy-time-driver = "0.2"
embassy-futures = "0.1"

portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

[profile.release]
opt-level = "s"
lto = true
