[package]
name = "nrf52840-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1"] }
embassy-time = "0.5"
embassy-sync = "0.7"
embassy-usb = "0.4"
embassy-usb-serial = "0.3"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
heapless = "0.9"

[profile.release]
opt-level = "s"
debug = 2
lto = true
