[package]
name = "nrf52840-router"
version = "0.1.0"
edition = "2021"

[dependencies]
zigbee-types = { path = "../../zigbee-types" }
zigbee-mac = { path = "../../zigbee-mac", features = ["nrf52840"] }
zigbee-nwk = { path = "../../zigbee-nwk" }
zigbee-aps = { path = "../../zigbee-aps" }
zigbee-zcl = { path = "../../zigbee-zcl" }
zigbee-runtime = { path = "../../zigbee-runtime" }

# nRF52840 HAL + Embassy
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.3", features = ["nrf52840", "time-driver-rtc1"] }
embassy-time = "0.4"

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
log = "0.4"

[profile.release]
opt-level = "s"
debug = 2
lto = true
